objects/Case.object
<CustomObject>
    <fields>
        <fullName>WT_Employee_Name__c</fullName>
        <formula>WT_Employee__r.WT_First_Name__c +&quot; &quot;+WT_Employee__r.WT_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>WT_Employee__c</referenceTo>
        <relationshipLabel>Cases (Employee)</relationshipLabel>
        <relationshipName>MYHR_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Exception__c</fullName>
        <description>Created as a part of DDBSFCRM-417</description>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex Issue</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Received Late</fullName>
                </value>
                <value>
                    <fullName>With Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Feedback__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Gravity_of_Issue__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Gravity of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Isolated</fullName>
                </value>
                <value>
                    <fullName>Systemic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_HRCaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Case Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only assign Case Owner as a HR User</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>WT MyHR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_HR_Case_Queue_Owner__c</fullName>
        <formula>if( Owner:Queue.QueueName =&quot;HR&quot; ,&quot;HR&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR Case Queue Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_HighMinorityCensusTract__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>High Minority ( &gt;50%) CensusTract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_In_Litigation__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>In Litigation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Is_Customer__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Is Customer ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Issue_Category__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage Origination</fullName>
                </value>
                <value>
                    <fullName>Mortgage Servicing</fullName>
                </value>
                <value>
                    <fullName>Consumer/Commercial Loan Origination</fullName>
                </value>
                <value>
                    <fullName>Consumer/ Commercial Loan Servicing</fullName>
                </value>
                <value>
                    <fullName>Deposit Acct Opening</fullName>
                </value>
                <value>
                    <fullName>Deposit Transactions</fullName>
                </value>
                <value>
                    <fullName>Debit/Credit Card/ ATM</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>Online/Mobile Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Latest_Reassigned_Date__c</fullName>
        <description>Created as part of DBSFCRM - 417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Reassigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Legacy_CaseNumber__c</fullName>
        <description>Added to capture the MSD case number shyam pati 3/5/21</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy CaseNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LoworModerateIncomeCensusTract__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Low or Moderate Income Census Tract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <description>Added for save the MSD ID for migration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Management_Reviewed_and_Closed__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Management Reviewed and Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Method_Received__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Method Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Errors &amp; Information Log</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Ethics Point</fullName>
                </value>
                <value>
                    <fullName>Attorney General</fullName>
                </value>
                <value>
                    <fullName>Regulatory Agency</fullName>
                </value>
                <value>
                    <fullName>In Person/Verbal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Social Media or Forum</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Better Business Bureau</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Name_of_Employee_Involved_applicable__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Employee Involved(if applicable)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Non_Customer_Complainant__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Customer Complainant</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Owner_Role_Name__c</fullName>
        <description>This store the Role Name of the owner of the case. This field will be used in Sharing Rules to exclude sharing of HR cases</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PostalCode__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Potential_Trend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Potential Trend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Product_Type__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Mortgage Loan</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Other Consumer Loan</fullName>
                </value>
                <value>
                    <fullName>Commercial Loan</fullName>
                </value>
                <value>
                    <fullName>Deposit Product</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Premium Financing</fullName>
                </value>
                <value>
                    <fullName>NDIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Recipient_Non_CRM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient (Non-CRM)</label>
        <referenceTo>WT_Employee__c</referenceTo>
        <relationshipLabel>Cases (Recipient (Non-CRM))</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Redisclosure__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Redisclosure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Referred_for_Fair_Lending_risk__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Referred for Fair Lending risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Referred_for_UDAAP_risk__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Referred for UDAAP risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Referred_to_Legal__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Referred to Legal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Related Compliance Cases</description>
        <label>Related Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.Type</field>
                <operation>equals</operation>
                <value>Compliance Complaint</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Compliance Related Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Report_Delivery_Method__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <label>Report Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>USPS Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Report_Type__c</fullName>
        <description>Created as part of DBSFCRM-197</description>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Categories of Information</fullName>
                </value>
                <value>
                    <fullName>Detailed Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Request_Type__c</fullName>
        <description>Creared as a part of DBSFCRM-120</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquired Banks Post Conversion</fullName>
                </value>
                <value>
                    <fullName>Acquired Banks Pre Conversion</fullName>
                </value>
                <value>
                    <fullName>Balancing</fullName>
                </value>
                <value>
                    <fullName>CDO (Central Deposit Operations)</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Conversion-Related</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
                <value>
                    <fullName>Funds Transfer (IFMS)</fullName>
                </value>
                <value>
                    <fullName>Government Reporting</fullName>
                </value>
                <value>
                    <fullName>Health Savings</fullName>
                </value>
                <value>
                    <fullName>Item Processing</fullName>
                </value>
                <value>
                    <fullName>Image Center - Customer Research</fullName>
                </value>
                <value>
                    <fullName>Image Center - Image Research</fullName>
                </value>
                <value>
                    <fullName>Image Center - Report Research</fullName>
                </value>
                <value>
                    <fullName>Image Center - Statement Research</fullName>
                </value>
                <value>
                    <fullName>Legacy Account Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Mass Exchange</fullName>
                </value>
                <value>
                    <fullName>Branch Openings &amp; Closures</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recalculate Interest</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Safe Deposit Box</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Year-End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Requested_by_current_user__c</fullName>
        <description>Created as part of DBSFCRM-1115</description>
        <formula>if(AND($User.Id == WT_Requester_s_Name__r.Id, RecordType.Name ==&apos;Deposit Application&apos;) ,true, 
    if(AND($User.Id ==  CreatedById , RecordType.Name ==&apos;CCPA&apos;) ,true,
    if(AND($User.Id ==  CreatedById , RecordType.Name ==&apos;Compliance Complaint&apos;) ,true, false))
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested by current user?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Requester_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-120</description>
        <label>Requester&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Required_by_Date__c</fullName>
        <description>Created as a part of DBSFCRM-120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Required by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Resolution_Date__c</fullName>
        <description>created as part of DSFCRM - 120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Resolution_Notes__c</fullName>
        <description>Created as a part of DBSFCRM-120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Resolution_Target__c</fullName>
        <description>Created as apart of DBSFCRM-120</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Target</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Resolution_Time__c</fullName>
        <description>Created as a part of DBSFCRM-379</description>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Resolution_Type__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed with monetary relief due to goodwill</fullName>
                </value>
                <value>
                    <fullName>Closed with monetary relief due to error</fullName>
                </value>
                <value>
                    <fullName>Closed with explanation</fullName>
                </value>
                <value>
                    <fullName>Closed with non-monetary relief</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Resolution__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Respond_By__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Respond By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Responded_On__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Responded On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Restitution_Paid__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Restitution Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Restitution__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Restitution?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Root_Cause_Type_2__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Root Cause Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Policy/Procedure</fullName>
                </value>
                <value>
                    <fullName>Bank/Entity Error</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Incorrect Information Provided</fullName>
                </value>
                <value>
                    <fullName>Misunderstanding of Product</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Root_Cause_Type__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>Root Cause Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Bank/Entity Error</fullName>
                </value>
                <value>
                    <fullName>Bank Policy/Procedure</fullName>
                </value>
                <value>
                    <fullName>Vendor Error</fullName>
                </value>
                <value>
                    <fullName>Incorrect Information Provided</fullName>
                </value>
                <value>
                    <fullName>Misunderstanding of Product</fullName>
                </value>
                <value>
                    <fullName>Failure to disclose relevant terms/conditions</fullName>
                </value>
                <value>
                    <fullName>Failure to deliver product/service as disclosed</fullName>
                </value>
                <value>
                    <fullName>Fiduciary Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Root_Cause__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_State__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Status_Date__c</fullName>
        <description>Created as a part of DBSFCRM-417</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
</CustomObject>